# Wavetable-Synth

./: .gitignore  CMakeLists.txt  README.md  TODO.md
Source/: PluginEditor.h  PluginProcessor.h  WavetableSynth.h
plugin/: CMakeLists.txt
plugin/include/WavetableSynth/: PluginEditor.h  PluginProcessor.h  WavetableOscillator.h  WavetableSynth.h
plugin/src/: PluginEditor.cpp  PluginProcessor.cpp  WavetableOscillator.cpp  WavetableSynth.cpp
